# ultralytics

./: !  .conda-env  .dockerignore  .gitignore  .pre-commit-config.yaml  1  100_split_dataset.py  100data.yaml  100data_linux.yaml  =1.0.2  =1.12.0  AGENTS.md  ANALYSIS_INDEX.md  BACKBONE_CONFIGS_COMPARISON.md  BRANCH_COMPARISON.md  CITATION.cff  CLAUDE.md  COLLISION_DETECTION_5MIN_GUIDE.md  COLLISION_DETECTION_CHINESE_SUMMARY.md  COLLISION_DETECTION_COMPLETE_ANALYSIS_SUMMARY.md  COLLISION_DETECTION_DOCUMENTS_INDEX.md  COLLISION_DETECTION_FLOWCHART.md  COLLISION_DETECTION_IMPLEMENTATION_GUIDE.md  COLLISION_DETECTION_IMPROVEMENT_ANALYSIS.md  COLLISION_DETECTION_QUICK_REFERENCE.md  COMPLIANCE_DOCS_INDEX.md  COMPLIANCE_EXECUTIVE_SUMMARY.md  COMPLIANCE_VISUAL_SUMMARY.md  CONTRIBUTING.md  DCN_BACKBONE_ENHANCEMENTS.md  DCN_MODIFICATIONS_REFERENCES.md  DCN_REFERENCES.md  DCN_REFERENCES.txt  DCN_V3_REFERENCES.md  Dockerfile  Dockerfile.tracker  Dockerfile_tracker  IMPLEMENTATION_ROADMAP.md  IMPROVEMENT_ROADMAP.md  INFRARED_BASELINE_NOTES.md  (+326 more)
examples/YOLO11-CPP-ONNXRUNNER-INT8/: CMakeLists.txt  README.md  change_onnx_mate.py  export_tflite.py  ott_check_for_int8.cpp  ott_check_for_int8.h  struct_def.h
examples/YOLO11-TensorRT-CUDA-Inference/: CMakeLists.txt  README.md  TRTHandle.h  main.cu
examples/YOLO11-Triton-CPP/: CMakeLists.txt  README.md  inference.cpp  inference.hpp  main.cpp
examples/YOLOv8-CPP-Inference/: CMakeLists.txt  OnnxExample.cpp  README.md  TrtExample.cpp  inference.cpp  inference.h  main.cpp
examples/YOLOv8-CPP-Inference/TRTInfer/: TRTinfer.cpp  TRTinfer.h  config.h  inference.h  utility.h
examples/YOLOv8-MNN-CPP/: CMakeLists.txt  README.md  main.cpp  main_interpreter.cpp
examples/YOLOv8-ONNXRuntime-CPP/: .gitignore  CMakeLists.txt  README.md  inference.cpp  inference.h  main.cpp
examples/YOLOv8-ONNXRuntime-Rust/: Cargo.toml  README.md
examples/YOLOv8-ONNXRuntime-Rust/src/: cli.rs  lib.rs  main.rs  model.rs  ort_backend.rs  yolo_result.rs
examples/YOLOv8-OpenVINO-CPP-Inference/: CMakeLists.txt  README.md  inference.cc  inference.h  main.cc
examples/YOLOv8-TensorRT-Inference/: CMakeLists.txt  README.md  build.sh  example.cc
examples/YOLOv8-TensorRT-Inference/TRTInfer/: TRTinfer.cc  TRTinfer.h  utility.cc  utility.h
examples/cpp/MNN/: CMakeLists.txt  README.md  inference.cc  inference.h  main.cpp  main_interpreter.cpp
examples/cpp/OpenCV-DNN/: CMakeLists.txt  README.md  inference.cpp  inference.h  main.cpp
examples/cpp/OpenVINO/: CMakeLists.txt  README.md  inference.cc  inference.h  main.cc
gcc-11.3.0/gmp-6.1.0/demos/: Makefile.am  Makefile.in  factorize.c  isprime.c  pexpr-config-h.in  primes.c  qcn.c
gcc-11.3.0/gmp-6.1.0/mpz/: 2fac_ui.c  Makefile.am  Makefile.in  abs.c  add.c  aorsmul_i.c  array_init.c  bin_uiui.c  cdiv_ui.c  clears.c  cmp_d.c  cmpabs.c  cmpabs_d.c  cmpabs_ui.c  com.c  combit.c  cong.c  cong_ui.c  dive_ui.c  divexact.c  divis_ui.c  dump.c  export.c  fac_ui.c  fdiv_q_ui.c  fdiv_qr_ui.c  fdiv_r_ui.c  fib2_ui.c  fits_sint.c  fits_ushort.c  gcd.c  gcd_ui.c  get_str.c  get_ui.c  import.c  init.c  init2.c  inp_str.c  invert.c  ior.c  (+50 more)
gcc-11.3.0/gmp-6.1.0/printf/: Makefile.am  asprntffuns.c  doprntf.c  obprintf.c  obprntffuns.c  printf.c  repl-vsnprintf.c  sprintf.c  sprintffuns.c  vasprintf.c  vfprintf.c  vsprintf.c
gcc-11.3.0/gmp/cxx/: Makefile.am  dummy.cc  ismpq.cc  ismpz.cc  osdoprnti.cc  osfuns.cc  osmpq.cc  osmpz.cc
gcc-11.3.0/gmp/mpq/: Makefile.am  abs.c  clears.c  cmp.c  cmp_si.c  equal.c  get_d.c  get_den.c  get_num.c  init.c  inits.c  inp_str.c  inv.c  mul.c  out_str.c  set_d.c  set_den.c  set_f.c  set_num.c  set_si.c  set_str.c  set_z.c
gcc-11.3.0/mpc/: INSTALL  Makefile.in  Makefile.vc  NEWS  README  config.guess  configure  configure.ac  ltmain.sh  missing
gcc-11.3.0/mpc-1.0.3/src/: Makefile.am  acos.c  acosh.c  add.c  add_si.c  add_ui.c  arg.c  asinh.c  atanh.c  cmp_si_si.c  cosh.c  div.c  div_2ui.c  div_fr.c  div_ui.c  exp.c  fma.c  fr_div.c  fr_sub.c  get_prec2.c  imag.c  init2.c  init3.c  inp_str.c  log.c  log10.c  logging.c  mem.c  mpc-log.h  mpc.h  mul.c  mul_2ui.c  mul_i.c  mul_ui.c  neg.c  norm.c  out_str.c  pow.c  pow_fr.c  pow_ui.c  (+17 more)
gcc-11.3.0/mpc/doc/: Makefile.am  Makefile.in  fdl-1.3.texi  mdate-sh  mpc.info  mpc.texi  version.texi
gcc-11.3.0/mpc/m4/: ax_c_check_flag.m4  libtool.m4  mpc.m4  valgrind-tests.m4
gcc-11.3.0/mpc/src/: Makefile.in  abs.c  add_fr.c  asin.c  atan.c  clear.c  cmp.c  conj.c  cos.c  div_2si.c  fr_sub.c  get_prec.c  get_version.c  get_x.c  mpc-impl.h  mpc.h  mul_2si.c  mul_fr.c  mul_si.c  pow_d.c  pow_ld.c  pow_si.c  real.c  set_prec.c  set_str.c  sin_cos.c  sub.c  sub_fr.c  sub_ui.c  tan.c  tanh.c
gcc-11.3.0/mpc/tests/: Makefile.am  comparisons.c  mpc-tests.h  random.c  tabs.c  tacos.c  tadd.c  tadd_ui.c  tatan.c  tatanh.c  tconj.c  tcos.c  tdiv.c  texp.c  tfr_div.c  tfr_sub.c  tgeneric.c  tget_version.c  timag.c  tio_str.c  tlog.c  tmul.c  tmul_si.c  tpow.c  tpow_fr.c  tpow_ld.c  tpow_si.c  tprec.c  tset.c  tsqr.c  tsqrt.c  tstrtoc.c  tsub_ui.c  ttanh.c  tui_ui_sub.c
gcc-11.3.0/mpfr-3.1.6/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  acinclude.m4  aclocal.m4  configure  configure.ac  ltmain.sh
gcc-11.3.0/mpfr-3.1.6/examples/: ReadMe  divworst.c  rndo-add.c
gcc-11.3.0/mpfr-3.1.6/m4/: size_max.m4
gcc-11.3.0/mpfr-3.1.6/src/: Makefile.am  abort_prec_max.c  add.c  add1sp.c  add_d.c  add_ui.c  ai.c  asinh.c  buildopt.c  cmp.c  cmp2.c  cmp_d.c  cmp_si.c  cmp_ui.c  const_catalan.c  const_log2.c  const_pi.c  copysign.c  csch.c  d_div.c  digamma.c  dim.c  div_2si.c  div_2ui.c  div_d.c  eint.c  erf.c  exceptions.c  exp.c  exp10.c  exp2.c  exp3.c  expm1.c  extract.c  fits_intmax.c  fits_uint.c  fits_uintmax.c  fits_ulong.c  fits_ushort.c  fms.c  (+84 more)
gcc-11.3.0/mpfr-3.1.6/tests/: Makefile.am  Makefile.in  cmp_str.c  memory.c  random2.c  rnd_mode.c  tacosh.c  tadd1sp.c  tadd_d.c  tadd_ui.c  (+77 more)
tracker/supervision/: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  demo.ipynb  mkdocs.yml  pyproject.toml
(+19205 files in other folders)
